#425: improve code